Add package.json keywords

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "git://github.com/sabberworm/overCOM.git"
   },
   "main": "index.js",
+  "keywords": ["COM", "Windows", "PowerShell"],
   "dependencies": {},
   "devDependencies": {},
   "optionalDependencies": {},
